objects/Bypass_Trigger_Settings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>The custom setting to Bypass Trigger logic for specific object or profile or permission set or specific user</description>
    <fields>
        <fullName>Bypass_Complete_Trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to Bypass Complete Trigger logic irrespective of any Profile, Permission set or User</description>
        <inlineHelpText>Bypass complete trigger logic</inlineHelpText>
        <label>Bypass Complete Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bypass_For_Permission_Sets__c</fullName>
        <description>Used to Bypass Complete Trigger logic for specific Permission set</description>
        <inlineHelpText>Place required permission set ids separated by comma &apos;,&apos; without any spaces,  example permissionsetid1,permissionsetid2</inlineHelpText>
        <label>Bypass For Permission Sets</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Bypass_For_Profiles__c</fullName>
        <description>Used to Bypass Complete Trigger logic for specific profiles</description>
        <inlineHelpText>Place required profile ids separated by comma &apos;,&apos; without any spaces,  example profileid1,profileid2</inlineHelpText>
        <label>Bypass For Profiles</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Bypass_For_Users__c</fullName>
        <description>Used to Bypass Complete Trigger logic for specific Users</description>
        <inlineHelpText>Place required user ids separated by comma &apos;,&apos; without any spaces,  example userid1,userid2</inlineHelpText>
        <label>Bypass For Users</label>
        <type>TextArea</type>
    </fields>
    <label>Bypass Trigger Settings</label>
</CustomObject>